force-app/main/default/objects/CoreDataLoadStatistic__c/CoreDataLoadStatistic__c.object-meta.xml
<CustomObject>
    <description>Custom object used to report daily &quot;Core&quot; data loads</description>
    <label>CoreDataLoadStatistic</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CoreDataLoadStatistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>