force-app/main/default/objects/CoreDataLoadStatistic__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Type of data that was loaded: PersonCustomer, BusinessCustomer, CustomerVariance, Junction, FinancialAccount...</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>