force-app/main/default/objects/CoreDataLoadStatistic__c/fields/Data_Type_Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Type_Load_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Data Type Load Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>