force-app/main/default/objects/CoreDataLoadStatistic__c/fields/Failed_Batch_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Batch_Count__c</fullName>
    <description>Number of batches that failed to load</description>
    <label>Failed Batch Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>