force-app/main/default/objects/CoreDataLoadStatistic__c/fields/Failed_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record_Count__c</fullName>
    <description>Number of records that could not be loaded into org</description>
    <label>Failed Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>