force-app/main/default/objects/CoreDataLoadStatistic__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <description>Bulk Data Job Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>JobId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>