force-app/main/default/objects/CoreDataLoadStatistic__c/fields/Load_Date__c.field-meta.xml
<CustomField>
    <fullName>Load_Date__c</fullName>
    <description>Date CoreData was loaded into ORG</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Load Date</label>
    <type>Date</type>
</CustomField>