force-app/main/default/objects/CoreDataLoadStatistic__c/fields/Successful_Batch_Count__c.field-meta.xml
<CustomField>
    <fullName>Successful_Batch_Count__c</fullName>
    <description>Number of batches that successfully loaded</description>
    <label>Successful Batch Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>