force-app/main/default/objects/CoreDataLoadStatistic__c/fields/Successful_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Successful_Record_Count__c</fullName>
    <description>Number of records successfully loaded into org</description>
    <label>Successful Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>